# CooP

./: .gitignore  CClass.h  CMakeLists.txt  LICENSE  README.md  main.c
nanostd/include/: MMHandle.h
nanostd/src/: MMHandle.c
test/FifoClient/: main.c
test/FifoServer/: main.c
test/HiddenIMPL/: Shape.c  Shape.h  Triangle.c  Triangle.h  main.c
test/MMClient/: main.c
test/MMServer/: main.c
test/PipeCS/: main.c
